Fix: Kaggle api to download datasets

--- a/backpack_eda.ipynb
+++ b/backpack_eda.ipynb
@@ -41,18 +41,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "4FBvDUH0H6cM"
       },
       "outputs": [],
       "source": [
-        "!pip install -q kaggle"
+        "%pip install -q kaggle"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -88,7 +88,7 @@
         }
       ],
       "source": [
-        "!pip install opendatasets"
+        "%pip install opendatasets"
       ]
     },
     {
@@ -1843,7 +1843,7 @@
         "id": "qesBfB3k7k0C"
       },
       "source": [
-        "- rename columns."
+        "- rename columns to follow snake_case style."
       ]
     },
     {
@@ -2606,7 +2606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2625,9 +2625,9 @@
       ],
       "source": [
         "# save this corrected dataframe in my drive\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "df.to_csv('/content/drive/My Drive/categorical_backpack.csv', index=False)"
+        "#from google.colab import drive\n",
+        "#drive.mount('/content/drive')\n",
+        "#df.to_csv('/content/drive/My Drive/categorical_backpack.csv', index=False)"
       ]
     },
     {
